--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "axios": "^1.6.5",
     "react": "^18.2.0",
+    "react-bootstrap-icons": "^1.8.4",
     "react-dom": "^18.2.0"
   },
   "devDependencies": {
